cmake_minimum_required(VERSION 2.8)

PROJECT(TPS_Holefilling)

MESSAGE(STATUS ${PROJECT_NAME} " BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS ${PROJECT_NAME} " SOURCE dir " ${PROJECT_SOURCE_DIR})

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

# SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
IF(CMAKE_HOST_WIN32)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libstatic)
ELSEIF(CMAKE_HOST_WIN32)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
ENDIF(CMAKE_HOST_WIN32)

ADD_SUBDIRECTORY(GMNR)
ADD_SUBDIRECTORY(ManualRegistration)
# ADD_SUBDIRECTORY(RigidRegistration)
ADD_SUBDIRECTORY(Transform)
ADD_SUBDIRECTORY(RemoveOverlap)

# IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  # SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR} CACHE PATH "" FORCE)
# ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

# INSTALL(FILES COPYRIGHT README DESTINATION share/doc)
# INSTALL(DIRECTORY doc/ DESTINATION share/doc)


