cmake_minimum_required(VERSION 2.8)

PROJECT(RemoveOverlap)

MESSAGE(STATUS ${PROJECT_NAME} " BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS ${PROJECT_NAME} " SOURCE dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# Dependencies
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

FIND_PACKAGE(PCL REQUIRED)
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(FLANN REQUIRED)
INCLUDE_DIRECTORIES(${FLANN_INCLUDE_DIRS})

# Source Code
FILE(GLOB sources
	"src/*.cpp"
	)
FILE(GLOB headers
	"src/*.h"
	)
	
ADD_DEFINITIONS(${PCL_DEFINITIONS})

ADD_EXECUTABLE(${PROJECT_NAME} ${sources} ${headers})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VTK_LIBRARIES} ${FLANN_LIBRARIES} ${PCL_LIBRARIES})

